--- a/MacfusionSettings-Info.plist
+++ b/MacfusionSettings-Info.plist
@@ -6,25 +6,21 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string>macfusionIcon</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.mgorbach.macfusion.prefpane</string>
+	<string>com.yourcompany.MacfusionSettings</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>Macfusion Preferences</string>
 	<key>CFBundlePackageType</key>
-	<string>BNDL</string>
+	<string>APPL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>NSMainNibFile</key>
-	<string>macfusionPrefs</string>
-	<key>NSPrefPaneIconFile</key>
-	<string>macfusionIcon</string>
-	<key>NSPrefPaneIconLabel</key>
-	<string>Macfusion</string>
+	<string>main</string>
 	<key>NSPrincipalClass</key>
-	<string>MFPreferencePane</string>
+	<string>NSApplication</string>
 </dict>
 </plist>
