--- a/MacfusionMenuling-Info.plist
+++ b/MacfusionMenuling-Info.plist
@@ -8,6 +8,8 @@
 	<array/>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string>macfusionIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.mgorbach.macfusion.MacfusionMenuling</string>
 	<key>CFBundleInfoDictionaryVersion</key>
