--- a/SSHFS/sshfs-Info.plist
+++ b/SSHFS/sshfs-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.mgorbach.macfusion.sshfs</string>
+	<string>org.mgorbach.macfusion2.sshfs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
