--- a/Resources/MacfusionMain-Info.plist
+++ b/Resources/MacfusionMain-Info.plist
@@ -35,10 +35,14 @@
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>SUFeedURL</key>
+	<string>http://macfusionapp.org/appcast.xml</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>SUCheckForUpdates</key>
+	<true/>
 	<key>CFBundleVersion</key>
-	<string>2.0 Beta 4</string>
+	<string>2.0 Beta 5</string>
 	<key>NSMainNibFile</key>
 	<string>main</string>
 	<key>NSPrincipalClass</key>
