Preparing for Final Release.

--- a/Resources/MacfusionMain-Info.plist
+++ b/Resources/MacfusionMain-Info.plist
@@ -28,7 +28,7 @@
 		</dict>
 	</array>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0 Beta 7</string>
+	<string>2.0</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
